[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hana"
version = "0.1.0"
description = "Hands Are Not APIs — Deterministic WordPress Catalog Ingestion Engine"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "hana contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
hana = "hana.cli:main"

[project.urls]
Homepage = "https://github.com/example/hana"
Documentation = "https://github.com/example/hana#readme"
Repository = "https://github.com/example/hana"

[tool.hatch.build.targets.wheel]
packages = ["hana"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
